[package]
name = "iyesengine_dylib"
version = "0.6.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
iyesengine_internal = { path = "../iyesengine_internal", default-features = false }
